adding the calculation of the Convex Hull 2D. The index of each dst of the hull is stored in the x->hull2. TODO : calculate the distance to the hull
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4583 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/SourceCode/MaxObjects/jcom.dbap/jcom.dbap.vcproj
+++ b/SourceCode/MaxObjects/jcom.dbap/jcom.dbap.vcproj
@@ -188,6 +188,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\dbap.h"
+				>
+			</File>
+			<File
+				RelativePath=".\hull2D.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
@@ -202,6 +210,10 @@
 			>
 			<File
 				RelativePath="$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\max-includes\common\commonsyms.c"
+				>
+			</File>
+			<File
+				RelativePath=".\hull2D.cpp"
 				>
 			</File>
 			<File
