Now copy the JamomaModular.dll in the Max5.0 support folder
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4584 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/SourceCode/Framework/JamomaModular.vcproj
+++ b/SourceCode/Framework/JamomaModular.vcproj
@@ -24,6 +24,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine="if exist &quot;C:\Program Files\Cycling &apos;74\Max 5.0\support\JamomaDSP.dll&quot; attrib -r -a &quot;C:\Program Files\Cycling &apos;74\Max 5.0\support\JamomaDSP.dll&quot;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -103,6 +104,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine="if exist &quot;C:\Program Files\Cycling &apos;74\Max 5.0\support\JamomaDSP.dll&quot; attrib -r -a &quot;C:\Program Files\Cycling &apos;74\Max 5.0\support\JamomaDSP.dll&quot;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
