Adding the NodeLib to the JamomaModular project (on Windows only) (Normally the Nodelib makes no build error)
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5217 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/SourceCode/Framework/JamomaModular.vcproj
+++ b/SourceCode/Framework/JamomaModular.vcproj
@@ -254,6 +254,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\NodeLib\NodeLib.h"
+				>
+			</File>
+			<File
 				RelativePath=".\DataspaceLib\NoneDataspace.h"
 				>
 			</File>
@@ -371,6 +375,10 @@
 			</File>
 			<File
 				RelativePath=".\Internals\jcom.send~.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\NodeLib\NodeLib.cpp"
 				>
 			</File>
 			<File
