consistency police for the AU plug-ins -- this way they show up the same way in insert menus in the hosts
git-svn-id: http://ttblue.googlecode.com/svn/branches/active@994 bc2ad3ca-9a4d-0410-8d14-35da9c29b421

--- a/examples/AudioUnits/BlueFilter/Info.plist
+++ b/examples/AudioUnits/BlueFilter/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.ttblue.${PRODUCT_NAME:identifier}</string>
+	<string>org.jamoma.dsp.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
