BlueButter AU example now builds as a single Xcode project rather than having to build a separate target/project for the ui.
git-svn-id: http://ttblue.googlecode.com/svn/branches/active@1006 bc2ad3ca-9a4d-0410-8d14-35da9c29b421

--- a/examples/AudioUnits/BlueButter/Info.plist
+++ b/examples/AudioUnits/BlueButter/Info.plist
@@ -24,5 +24,9 @@
 	<string>1.1</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
+	<key>NSPrincipleClass</key>
+	<string>BlueButterView_ViewFactory</string>
+	<key>NSMainNibFile</key>
+	<string>CocoaView</string>
 </dict>
 </plist>
