FunctionLib: adding exp and log functions to the Windows project
git-svn-id: http://ttblue.googlecode.com/svn/branches/active@1060 bc2ad3ca-9a4d-0410-8d14-35da9c29b421

--- a/extensions/TTFunctionLib/TTFunctionLib.vcproj
+++ b/extensions/TTFunctionLib/TTFunctionLib.vcproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
@@ -201,11 +201,27 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ExpFunction.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ExpFunction.h"
+				>
+			</File>
+			<File
 				RelativePath=".\LinearFunction.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\LinearFunction.h"
+				>
+			</File>
+			<File
+				RelativePath=".\LogFunction.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\LogFunction.h"
 				>
 			</File>
 			<File
