Adding wildcard looking up. Adding some codes from the active branch.
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/experimental@5482 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/SourceCode/MaxObjects/jcom.cuemanager/jcom.cuemanager.vcproj
+++ b/SourceCode/MaxObjects/jcom.cuemanager/jcom.cuemanager.vcproj
@@ -205,7 +205,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\max-includes\common\commonsyms.c"
+				RelativePath="..\..\..\..\Tools\library\max-sdk\c74support\max-includes\common\commonsyms.c"
 				>
 			</File>
 			<File
