Now there are the "NodeLib" which is a generic library to deal with tree structures and the "JamomaNode" which use the NodeLib to create a tree to describe his namespace.
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/experimental@5487 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/SourceCode/Framework/JamomaModular.vcproj
+++ b/SourceCode/Framework/JamomaModular.vcproj
@@ -222,6 +222,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\NodeLib\JamomaNode.h"
+				>
+			</File>
+			<File
 				RelativePath=".\source\JamomaObject.h"
 				>
 			</File>
@@ -343,6 +347,10 @@
 			</File>
 			<File
 				RelativePath=".\jamoma.def"
+				>
+			</File>
+			<File
+				RelativePath=".\NodeLib\JamomaNode.cpp"
 				>
 			</File>
 			<File
