--- a/Papers/SMC2009/smc2009-poster.graffle/data.plist
+++ b/Papers/SMC2009/smc2009-poster.graffle/data.plist
@@ -6,7 +6,7 @@
 	<integer>0</integer>
 	<key>ApplicationVersion</key>
 	<array>
-		<string>com.omnigroup.OmniGrafflePro</string>
+		<string>com.omnigroup.OmniGraffle</string>
 		<string>137.11.0.108132</string>
 	</array>
 	<key>AutoAdjust</key>
@@ -40,7 +40,7 @@
 	<key>ColumnSpacing</key>
 	<real>36</real>
 	<key>CreationDate</key>
-	<string>2009-07-14 14:20:49 -0400</string>
+	<string>2009-07-14 20:20:49 +0200</string>
 	<key>Creator</key>
 	<string>lossius</string>
 	<key>DisplayScale</key>
@@ -174,73 +174,10 @@
 				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf460
 {\fonttbl\f0\fnil\fcharset0 GillSans;}
 {\colortbl;\red255\green255\blue255;\red204\green102\blue102;}
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
 
 \f0\b\fs96 \cf2 \expnd0\expndtw0\kerning0
 STRATIFIED APPROACH }</string>
-				<key>VerticalPad</key>
-				<integer>0</integer>
-			</dict>
-			<key>TextPlacement</key>
-			<integer>0</integer>
-		</dict>
-		<dict>
-			<key>Bounds</key>
-			<string>{{179.938, 1187}, {604.022, 533}}</string>
-			<key>Class</key>
-			<string>ShapedGraphic</string>
-			<key>FitText</key>
-			<string>Vertical</string>
-			<key>Flow</key>
-			<string>Resize</string>
-			<key>FontInfo</key>
-			<dict>
-				<key>Font</key>
-				<string>GillSans</string>
-				<key>Size</key>
-				<real>31</real>
-			</dict>
-			<key>ID</key>
-			<integer>575</integer>
-			<key>Layer</key>
-			<integer>0</integer>
-			<key>Shape</key>
-			<string>Rectangle</string>
-			<key>Style</key>
-			<dict>
-				<key>fill</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>shadow</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>stroke</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-			</dict>
-			<key>Text</key>
-			<dict>
-				<key>Align</key>
-				<integer>0</integer>
-				<key>Pad</key>
-				<integer>0</integer>
-				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf460
-{\fonttbl\f0\fnil\fcharset0 GillSans;}
-{\colortbl;\red255\green255\blue255;}
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
-
-\f0\fs72 \cf0 There are great individual and context-related differences in the compositional use of spatialization. There is no one spatialization system that could satisfy every artist.\
-\
-Different spatialisation applications should be readily combined.\
-\
-Guaranteeing efficient workflow for sound spatialization requires structure, flexibility, and interoperability across all involved components.}</string>
 				<key>VerticalPad</key>
 				<integer>0</integer>
 			</dict>
@@ -541,7 +478,7 @@ Guaranteeing efficient workflow for sound spatialization requires structure, fle
 				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf460
 {\fonttbl\f0\fnil\fcharset0 GillSans;}
 {\colortbl;\red255\green255\blue255;\red204\green102\blue102;}
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
 
 \f0\b\fs282 \cf2 \expnd0\expndtw0\kerning0
 1}</string>
@@ -1026,71 +963,6 @@ Cycling'74, Electrotap}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{179.938, 1702}, {604.022, 200}}</string>
-			<key>Class</key>
-			<string>ShapedGraphic</string>
-			<key>FitText</key>
-			<string>Vertical</string>
-			<key>Flow</key>
-			<string>Resize</string>
-			<key>FontInfo</key>
-			<dict>
-				<key>Font</key>
-				<string>GillSans</string>
-				<key>Size</key>
-				<real>31</real>
-			</dict>
-			<key>ID</key>
-			<integer>559</integer>
-			<key>Layer</key>
-			<integer>0</integer>
-			<key>Shape</key>
-			<string>Rectangle</string>
-			<key>Style</key>
-			<dict>
-				<key>fill</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>shadow</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>stroke</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-			</dict>
-			<key>Text</key>
-			<dict>
-				<key>Align</key>
-				<integer>0</integer>
-				<key>Pad</key>
-				<integer>0</integer>
-				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf460
-{\fonttbl\f0\fnil\fcharset0 GillSans;}
-{\colortbl;\red255\green255\blue255;\red204\green102\blue102;}
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
-
-\f0\b\fs62 \cf2 A STRATIFIED APPROACH\
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
-
-\b0\fs72 \cf0 In different sfgsfdg\
-sfdgfsgd\
-fsdgfgsd\
-fdgs}</string>
-				<key>VerticalPad</key>
-				<integer>0</integer>
-			</dict>
-			<key>TextPlacement</key>
-			<integer>0</integer>
-		</dict>
-		<dict>
-			<key>Bounds</key>
 			<string>{{297.182, 1025}, {542.031, 165}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
@@ -1155,7 +1027,7 @@ fdgs}</string>
 				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf460
 {\fonttbl\f0\fnil\fcharset0 GillSans;}
 {\colortbl;\red255\green255\blue255;\red204\green102\blue102;}
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
 
 \f0\b\fs96 \cf2 \expnd0\expndtw0\kerning0
 NEED FOR INTEROPERABILITY\
@@ -1168,7 +1040,7 @@ NEED FOR INTEROPERABILITY\
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{854.923, 1097}, {604.022, 774}}</string>
+			<string>{{871.959, 1187}, {604.022, 774}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -1232,6 +1104,69 @@ A variety of
 \b stand-alone
 \b0  spatialization systems are in development.  \
 }</string>
+				<key>VerticalPad</key>
+				<integer>0</integer>
+			</dict>
+			<key>TextPlacement</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{179.938, 1187}, {604.022, 902}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FitText</key>
+			<string>Vertical</string>
+			<key>Flow</key>
+			<string>Resize</string>
+			<key>FontInfo</key>
+			<dict>
+				<key>Font</key>
+				<string>GillSans</string>
+				<key>Size</key>
+				<real>31</real>
+			</dict>
+			<key>ID</key>
+			<integer>575</integer>
+			<key>Layer</key>
+			<integer>0</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Align</key>
+				<integer>0</integer>
+				<key>Pad</key>
+				<integer>0</integer>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf460
+{\fonttbl\f0\fnil\fcharset0 GillSans;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
+
+\f0\fs72 \cf0 Creative work on spatialisation is too much tied into the particular software, rendering techniques, storage formats and playback systems used.  There are great individual and context-related differences in the compositional use of spatialization, and there is no one spatialization system that could satisfy every artist.\
+\
+This lack of flexibility hinders creative processes, interchangability and possibilities for working on and reproducing works outside of their original context.\
+\
+Different spatialisation applications should be readily combined, guaranteeing efficient workflow for sound spatialization. This requires structure, flexibility, and interoperability across all involved components.}</string>
 				<key>VerticalPad</key>
 				<integer>0</integer>
 			</dict>
@@ -1308,10 +1243,12 @@ A variety of
 
 \f0\b\fs96 \cf2 ABSTRACT
 \b0 \cf0  \
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
 
 \fs72 \cf0 We propose a multi-layer structure to mediate essential components in sound spatialization. This approach will facilitate artistic work with spatialization systems, a process which currently lacks structure, flexibility, and interoperability. \
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
 
-\fs62 \
+\fs62 \cf0 \
 }</string>
 				<key>VerticalPad</key>
 				<integer>0</integer>
@@ -1584,9 +1521,9 @@ for sound spatialization}</string>
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2009-07-15 18:07:50 -0400</string>
+	<string>2009-07-16 14:07:10 +0200</string>
 	<key>Modifier</key>
-	<string>Nils Peters</string>
+	<string>lossius</string>
 	<key>NotesVisible</key>
 	<string>NO</string>
 	<key>Orientation</key>
@@ -1610,7 +1547,7 @@ for sound spatialization}</string>
 		<key>NSPaperName</key>
 		<array>
 			<string>string</string>
-			<string>619AF05D-3FAF-4DB8-80CE-406B0DE516D5</string>
+			<string>6806F3FF-7591-4ACD-B17F-91F4AA279848</string>
 		</array>
 		<key>NSPaperSize</key>
 		<array>
@@ -1660,7 +1597,7 @@ for sound spatialization}</string>
 			</dict>
 		</array>
 		<key>Frame</key>
-		<string>{{79, 4}, {816, 774}}</string>
+		<string>{{61, 4}, {1107, 874}}</string>
 		<key>ListView</key>
 		<true/>
 		<key>OutlineWidth</key>
@@ -1674,15 +1611,15 @@ for sound spatialization}</string>
 		<key>SidebarWidth</key>
 		<integer>120</integer>
 		<key>VisibleRegion</key>
-		<string>{{-160, 832}, {2668, 2480}}</string>
+		<string>{{-277, 836.364}, {2900, 2181.82}}</string>
 		<key>Zoom</key>
-		<real>0.25</real>
+		<real>0.33000001311302185</real>
 		<key>ZoomValues</key>
 		<array>
 			<array>
 				<string>Canvas 1</string>
+				<real>0.33000001311302185</real>
 				<real>0.25</real>
-				<real>0.40000000596046448</real>
 			</array>
 		</array>
 	</dict>
