--- a/Papers/SMC2009/smc2009-poster.graffle/data.plist
+++ b/Papers/SMC2009/smc2009-poster.graffle/data.plist
@@ -6,7 +6,7 @@
 	<integer>0</integer>
 	<key>ApplicationVersion</key>
 	<array>
-		<string>com.omnigroup.OmniGraffle</string>
+		<string>com.omnigroup.OmniGrafflePro</string>
 		<string>137.11.0.108132</string>
 	</array>
 	<key>AutoAdjust</key>
@@ -40,7 +40,7 @@
 	<key>ColumnSpacing</key>
 	<real>36</real>
 	<key>CreationDate</key>
-	<string>2009-07-14 20:20:49 +0200</string>
+	<string>2009-07-14 14:20:49 -0400</string>
 	<key>Creator</key>
 	<string>lossius</string>
 	<key>DisplayScale</key>
@@ -51,7 +51,46 @@
 	<array>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1790, 2188}, {388.818, 57}}</string>
+			<string>{{1548, 1157.56}, {637.071, 936.378}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FontInfo</key>
+			<dict>
+				<key>Font</key>
+				<string>GillSans-Bold</string>
+				<key>Size</key>
+				<real>31</real>
+			</dict>
+			<key>ID</key>
+			<integer>578</integer>
+			<key>ImageID</key>
+			<integer>11</integer>
+			<key>Layer</key>
+			<integer>0</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{1705.33, 2193.94}, {499.667, 57}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -101,7 +140,7 @@
 {\colortbl;\red255\green255\blue255;\red204\green102\blue102;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
 
-\f0\b\fs96 \cf2 DESIGN}</string>
+\f0\b\fs96 \cf2 IMPLEMENTATION }</string>
 				<key>VerticalPad</key>
 				<integer>0</integer>
 			</dict>
@@ -186,7 +225,7 @@ STRATIFIED APPROACH }</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1682, 2108}, {90, 165}}</string>
+			<string>{{1597.33, 2108}, {90, 165}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -750,45 +789,13 @@ STRATIFIED APPROACH }</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{368.575, 2200}, {1576.72, 809.422}}</string>
+			<string>{{355.228, 2199.79}, {1576.72, 809.422}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
 			<integer>564</integer>
 			<key>ImageID</key>
 			<integer>4</integer>
-			<key>Layer</key>
-			<integer>0</integer>
-			<key>Shape</key>
-			<string>Rectangle</string>
-			<key>Style</key>
-			<dict>
-				<key>fill</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>shadow</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>stroke</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-			</dict>
-		</dict>
-		<dict>
-			<key>Bounds</key>
-			<string>{{1524, 1159}, {707.124, 854}}</string>
-			<key>Class</key>
-			<string>ShapedGraphic</string>
-			<key>ID</key>
-			<integer>563</integer>
-			<key>ImageID</key>
-			<integer>3</integer>
 			<key>Layer</key>
 			<integer>0</integer>
 			<key>Shape</key>
@@ -1441,7 +1448,7 @@ for sound spatialization}</string>
 	<key>HPages</key>
 	<integer>1</integer>
 	<key>ImageCounter</key>
-	<integer>11</integer>
+	<integer>12</integer>
 	<key>ImageLinkBack</key>
 	<array>
 		<dict/>
@@ -1455,6 +1462,7 @@ for sound spatialization}</string>
 	</array>
 	<key>ImageList</key>
 	<array>
+		<string>image11.pdf</string>
 		<string>image10.tiff</string>
 		<string>image9.tiff</string>
 		<string>image8.tiff</string>
@@ -1462,7 +1470,6 @@ for sound spatialization}</string>
 		<string>image6.tiff</string>
 		<string>image5.pdf</string>
 		<string>image4.pdf</string>
-		<string>image3.pdf</string>
 	</array>
 	<key>KeepToScale</key>
 	<false/>
@@ -1521,9 +1528,9 @@ for sound spatialization}</string>
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2009-07-16 14:07:10 +0200</string>
+	<string>2009-07-16 09:11:15 -0400</string>
 	<key>Modifier</key>
-	<string>lossius</string>
+	<string>Nils Peters</string>
 	<key>NotesVisible</key>
 	<string>NO</string>
 	<key>Orientation</key>
@@ -1547,7 +1554,7 @@ for sound spatialization}</string>
 		<key>NSPaperName</key>
 		<array>
 			<string>string</string>
-			<string>6806F3FF-7591-4ACD-B17F-91F4AA279848</string>
+			<string>A227DA89-FFB1-48E2-8114-5973A189330F</string>
 		</array>
 		<key>NSPaperSize</key>
 		<array>
@@ -1597,7 +1604,7 @@ for sound spatialization}</string>
 			</dict>
 		</array>
 		<key>Frame</key>
-		<string>{{61, 4}, {1107, 874}}</string>
+		<string>{{49, 4}, {1107, 774}}</string>
 		<key>ListView</key>
 		<true/>
 		<key>OutlineWidth</key>
@@ -1611,7 +1618,7 @@ for sound spatialization}</string>
 		<key>SidebarWidth</key>
 		<integer>120</integer>
 		<key>VisibleRegion</key>
-		<string>{{-277, 836.364}, {2900, 2181.82}}</string>
+		<string>{{-277, 618.182}, {2900, 1878.79}}</string>
 		<key>Zoom</key>
 		<real>0.33000001311302185</real>
 		<key>ZoomValues</key>
