--- a/SourceCode/MaxObjects/jcom.cubicInterpolate/jcom.cubicInterpolate.vcproj
+++ b/SourceCode/MaxObjects/jcom.cubicInterpolate/jcom.cubicInterpolate.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="jcom.cubic_interpolate"
+	Name="jcom.cubicInterpolate"
 	ProjectGUID="{62D83C78-EA6D-49B0-AA38-F4DF8BB04D6C}"
-	RootNamespace="jcom.cubic_interpolate"
+	RootNamespace="jcom.cubicInterpolate"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="0"
 	>
@@ -205,7 +205,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\jcom.cubic_interpolate.cpp"
+				RelativePath=".\jcom.cubicInterpolate.cpp"
 				>
 			</File>
 		</Filter>
